# pico-dev-nix

./: README.md  shell.nix
project/: CMakeLists.txt  pico.c
